infra/k8s/monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team1-monitor
  namespace: default
spec:
  replicas: 1

  selector:
    matchLabels:
      app: team1-monitor

  template:
    metadata:
      labels:
        app: team1-monitor
    spec:
      serviceAccountName: team1-monitor-sa

      containers:
        - name: team1-monitor
          image: 727646470302.dkr.ecr.ap-northeast-2.amazonaws.com/team1/monitor:latest

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: team1-monitor-svc
  namespace: default
spec:
  selector:
    app: team1-monitor
  ports:
    - port: 8080
      targetPort: 8080
