infra/k8s/monitor-ingress.yaml
# team1-backend-ingress와 같은 ALB(group.name: team1-shared)를 공유하되,
# Basic Auth 때문에 "/" 헬스체크가 401을 받는 문제를 피하기 위해
# 별도 Ingress로 분리해서 헬스체크 경로만 다르게 지정함
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team1-monitor-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:727646470302:certificate/9085e196-5c96-4d18-9214-315810d902e6
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: team1-shared
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  rules:
    - host: monitor.jhyang.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: team1-monitor-svc
                port:
                  number: 8080
